cabecera version inicial con el css separado

--- a/cabecera.html
+++ b/cabecera.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css" />
+    <title>Pair Programing</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand mr-auto" href="#"><img src="img/sofka.jpg" height="30" width="41"></a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#"><span></span>
-                            Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span></span> Sobre nostros</a>
-                        <li class="nav-item"><a class="nav-link" href="#"><span></span> Menu</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="./contactus.html"><span></span>
-                            Contacto</a></li>
-                </ul>
-                <span class="navbar-text">
-                    <a id="loginbutton">
-                        <span ></span> Login</a>
-                </span>
-            </div>
+
+    <div class="header">
+        <a href="#default" class="logo">SofkaU</a>
+        <div class="header-right">
+            <a class="active" href="#home">Home</a>
+            <a class="active" href="#cursos">Cursos</a>
+            <a href="#contact">Contacto</a>
+            <a href="#about">Sobre Nosotros</a>
         </div>
-    </nav>
+    </div>
+
+    <div style="padding-left:20px">
+
+    </div>
+
 </body>
 
 </html>
